# CMakeFindProjectTest

./: README.md  build.bat
test_app/: CMakeLists.txt  build.bat
test_app/src/: main.cpp
test_depending/: CMakeLists.txt  build.bat
test_depending/test_depending/: CMakeLists.txt
test_depending/test_depending/include/test_depending/: test_depending.h
test_depending/test_depending/src/: test_depending.cpp  test_private.cpp  test_private.h
test_interface/: CMakeLists.txt  build.bat
test_interface/include/test_interface/: test_interface.h
test_static/: CMakeLists.txt  build.bat
test_static/test_static/: CMakeLists.txt
test_static/test_static/include/test_static/: test_static.h
test_static/test_static/src/: test_private.cpp  test_private.h  test_static.cpp
